#pragma once

#include "public.h"

namespace NYT {
namespace NScheduler {

////////////////////////////////////////////////////////////////////////////////

struct TJobToRelease
{
    TJobId JobId;
    bool ArchiveJobSpec = false;
    bool ArchiveStderr = false;
};

////////////////////////////////////////////////////////////////////////////////

} // namespace NScheduler
} // namespace NYT
